[package]
name = "radix-engine-toolkit"
version = "0.12.0-fig.1"
edition = "2021"

[dependencies]
# radixdlt-scrypto dependencies.
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-d663d07", features = ["serde"] }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-d663d07", features = ["serde"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-d663d07" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-d663d07", default-features= false, features = ["std", "lru"] }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-d663d07", features = ["serde"] }

# Core Radix Engine Toolkit
radix-engine-toolkit-core = { path = "../radix-engine-toolkit-core" }

# Serde for JSON serialization
serde = { version = "1.0.163" }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
serde_with = { version = "3.0.0", features = ["hex"] }
schemars = { version = "0.8.12", features = ["preserve_order"] }

# Bech32 for encoding and decoding addresses
bech32 = { version = "0.9.1" }

# Used to be able to expose the crate to JVM clients
jni = { version = "0.21.1" }

# Used to allow for more powerful macros
paste = { version = "1.0.12" }
walkdir = "2.3.3"
indexmap = { version = "1.9.3", features = ["serde", "serde-1"] }

# 1password's library for codesharing.
typeshare = "1.0.1"

[dev-dependencies]
walkdir = "2.3.3"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
incremental = false
panic = 'abort'
codegen-units = 1
