[package]
name = "sbor-json"
version = "1.0.0"
edition = "2021"
description = "The implementation of the SBOR JSON representations"

[dependencies]
# The Scrypto dependencies needed.
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "47fd79672d7f92967262a6975a493300db3d901b", features = ["serde"] }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "47fd79672d7f92967262a6975a493300db3d901b", features = ["serde"] }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "47fd79672d7f92967262a6975a493300db3d901b" }

# The serde dependenices used for the serialization and deserialization of the JSON representations.
serde = { version = "1.0.185", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
serde_with = { version = "3.0.0", features = ["hex"] }
regex = "1.9.3"
bech32 = "0.9.1"
