[package]
name = "schema"
version = "0.9.0"
edition = "2021"

[dependencies]
# A library which allows us to generate a JSON schema from Rust models
schemars = { version = "0.8.11", features = ["preserve_order"] }

# Used to serialize the schema to JSON
serde_json = "1.0.91"

# Importing core to get the models to generate it
radix-engine-toolkit = { path = "../radix-engine-toolkit" }
serde = "1.0.152"
convert_case = "0.6.0"

sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-508fa797" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-508fa797" }
scrypto_utils = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-508fa797", package = "utils" }
native_transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-508fa797", package = "transaction" }
radix-engine-constants = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-508fa797" }
hex = "0.4.3"
