[package]
name = "generator"
version = "2.1.0-dev1"
edition = "2021"

[dependencies]
# radixdlt-scrypto dependencies.
sbor = { workspace = true }
scrypto = { workspace = true }
scrypto-test = { workspace = true }
radix-common = { workspace = true }
radix-engine = { workspace = true }
radix-engine-interface = { workspace = true }
radix-substate-store-impls = { workspace = true }
radix-transactions = { workspace = true }
radix-transaction-scenarios = { workspace = true }

# Core Radix Engine Toolkit and Toolkit Native Library
radix-engine-toolkit = { path = "../radix-engine-toolkit" }
radix-engine-toolkit-json = { path = "../radix-engine-toolkit-json" }

# Serde dependencies
serde = { version = "1.0.163" }
serde_yaml = { version = "0.9.21" }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
serde_with = { version = "3.0.0", features = ["hex"] }
schemars = { version = "0.8.12", features = ["preserve_order"] }
rocket_okapi = { git = "https://github.com/0xOmarA/okapi", tag = "0.8.0-rc.4", features = ["preserve_order"] }

# Used to change the casing of strings
heck = { version = "0.4.1" }

# Used in walking directories to get manifests
walkdir = { version = "2.3.3" }

# Misc
indexmap = { version = "1.9.3" }
