[package]
name = "radix-engine-toolkit-uniffi"
version = "2.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
# radixdlt-scrypto dependencies.
sbor = { workspace = true }
scrypto = { workspace = true }
transaction = { workspace = true }
radix-engine = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-queries = { workspace = true }
radix-engine-interface = { workspace = true }

# Core Radix Engine Toolkit
radix-engine-toolkit = { path = "../radix-engine-toolkit" }

# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4", features = ["cli"] }
hex = "0.4.3"
thiserror = "1.0.50"
paste = "1.0.12"

[build-dependencies]
# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4", features = ["build"] }

[dev-dependencies]
# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4", features = ["bindgen-tests"] }
scrypto-unit = { workspace = true }
radix-engine-stores = { workspace = true }
transaction-scenarios = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
