[package]
name = "radix-engine-toolkit-uniffi"
version = "2.1.0-dev1"
edition = "2021"
build = "build.rs"

[dependencies]
# radixdlt-scrypto dependencies.
sbor = { workspace = true }
scrypto = { workspace = true }
radix-common = { workspace = true }
radix-engine = { workspace = true }
radix-engine-interface = { workspace = true }
radix-substate-store-queries = { workspace = true }
radix-transactions = { workspace = true }
native-radix-engine-toolkit = { workspace = true }

# Core Radix Engine Toolkit
radix-engine-toolkit = { path = "../radix-engine-toolkit" }

# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4", features = ["cli"] }
hex = "0.4.3"
thiserror = "1.0.50"
paste = "1.0.12"
serde_json = "1.0.127"

[build-dependencies]
# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4", features = ["build"] }

[dev-dependencies]
# The UniFFI crate for generating bindings to other languages
uniffi = { git = "https://github.com/0xOmarA/uniffi-rs", tag = "v0.25.4", features = ["bindgen-tests"] }
scrypto-test = { workspace = true }
radix-substate-store-impls = { workspace = true }
radix-transaction-scenarios = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
