[package]
name = "radix-engine-toolkit-uniffi"
version = "2.2.3"
edition = "2021"
build = "build.rs"

[dependencies]
# radixdlt-scrypto dependencies.
sbor = { workspace = true }
scrypto = { workspace = true }
radix-common = { workspace = true }
radix-engine = { workspace = true }
radix-engine-interface = { workspace = true }
radix-substate-store-queries = { workspace = true }
radix-transactions = { workspace = true }
radix-engine-toolkit-common = { workspace = true }

# Core Radix Engine Toolkit
radix-engine-toolkit = { workspace = true }

# The UniFFI crate for generating bindings to other languages
uniffi = { workspace = true, features = ["cli"] }

# Other dependencies
hex = { workspace = true }
thiserror = { workspace = true }
paste = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
# The UniFFI crate for generating bindings to other languages
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
# The UniFFI crate for generating bindings to other languages
uniffi = { workspace = true, features = ["bindgen-tests"] }
scrypto-test = { workspace = true }
radix-substate-store-impls = { workspace = true }
radix-transaction-scenarios = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
