[package]
name = "sbor-json"
version = "2.2.3"
edition = "2021"
description = "The implementation of the SBOR JSON representations"

[dependencies]
# The Scrypto dependencies needed.
sbor = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }

# The serde dependencies used for the serialization and deserialization of the
# JSON representations.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true, features = ["hex"] }

# Additional dependencies
regex = { workspace = true }
bech32 = { workspace = true }
